# QFrameGrabber

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
example/: CMakeLists.txt
example/NativePlayer/: CMakeLists.txt  main.cpp
example/QtPlayer/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
lib/: CMakeLists.txt
lib/include/qframgrabber/: Buffer.hpp  MetaUtils.hpp  QFrameProvider.hpp  QImageViewer.hpp  Types.hpp  Utils.hpp
lib/src/: FrameGrabberImpl.cpp  FrameGrabberImpl.hpp  QFrameProvider.cpp  QImageViewer.cpp  Utils.cpp
